src/index-sass/index.scss
@use "sass:math";

@import "../Global-sass/function", "../Global-sass/colors";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#root, body, html {
  height: 100%;
}

body {
  min-width: rem(375);
}

h1,
h2,
p {
  font-family: "Ubuntu", sans-serif;
}

.App {
  background-color: $light-bg-main;
  height: 100%;
}

.App.darkMode {
  background-color: $dark-bg-main;
}

.lightMode-title,
.darkMode-title {
  padding: 1rem 0;
  font-size: rem(40);
}

.darkMode-title {
  color: $dark-text;
}

.dark-task-box,
.light-task-box {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  height: rem(350);
  overflow-y: scroll;
}

.dark-task-box {
  background-color: $dark-bg-main;
  .task-area.dark {
    background-color: $dark-bg-card;
  }
}
.light-task-box {
  .task-area.light {
    background-color: $light-bg-cards;
  }
}

.switch.sun-btn,
.switch.moon-btn {
  position: absolute;
  top: 15%;
}

.switch.moon-btn {
  color: #ffff;
  display: flex;
  align-items: center;
  left: 5%;
}

.switch.sun-btn {
  right: 5%;
}

.strikethrough {
  text-decoration: line-through;
}

.remove-btn,
.complete-btn,
.edit-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  width: rem(55);
  height: rem(45);
  border-radius: rem(8);
  border: none;
  font-size: rem(20);
  cursor: pointer;
}
.remove-btn {
  background-color: $btn-remove;
  color: #ffff;
}
.complete-btn {
  background-color: $btn-complete;
  color: #262727;
}

.edit-btn {
  background-color: transparent;
}

.edit-btn.dark {
  color: #ffff;
}

.edit-btn.light {
  color: #262727;
}

.edit-task-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  input{
    padding: 0.5rem;
    border-radius: rem(8);
    border: rem(1) solid #262727;
  }
  .save-btn{
    background-color: $btn-color;
    border: none;
    color: #ffff;
    font-weight: 700;
    font-family: 'Ubuntu', sans-serif;
    padding: rem(10);
    border-radius: rem(8);
    letter-spacing: rem(1);
    
  }
}

.todo-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  margin-bottom: 2rem;
}

.tasks-container {
  width: 90%;
  margin: 0 auto;
  &__form {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    gap: 1rem;
    padding-bottom: 4rem;
    .task-title,
    .task-description {
      padding: 1rem;
      width: 100%;
      font-size: rem(18);
      border-radius: rem(8);
      letter-spacing: rem(1);
      border: 1px solid #262727;
    }
    .task-btn {
      width: rem(150);
      height: rem(50);
      border-radius: rem(10);
      border: none;
      background-color: $btn-color;
      cursor: pointer;
      font-size: rem(18);
      letter-spacing: rem(1);
      color: #ffff;
      font-weight: 700;
    }
  }
}

.task-area {
  display: flex;
  align-items: center;
  padding: 1rem;
  border-radius: rem(10);
  &__box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
    &__title.light {
      color: $light-headings;
    }
    &__description.light {
      color: $light-descriptions;
    }
    &__title.dark,
    &__description.dark {
      color: $dark-text;
    }
  }
  .box-task-btn-group {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin-left: auto;
    margin-right: 1rem;
  }
}

@media only screen and (min-width: 1200px) {
  .dark-task-box,
  .light-task-box {
    flex-wrap: wrap;
    flex-direction: row;
    overflow: visible;
    width: 100%;
    .task-area{
      width: auto;
    }
  }
  .tasks-container {
    &__form {
      flex-direction: row;
      .task-btn {
        transition: all 250ms ease-in;
        width: rem(300);
        &:hover {
          filter: brightness(1.3);
        }
        &:active {
          transform: translateY(5px);
        }
      }
    }
  }

  .box-task-btn-group {
    .remove-btn,
    .complete-btn {
      transition: all 250ms ease-in;
      &:active {
        transform: translateY(5px);
      }
    }
    .remove-btn {
      &:hover {
        filter: brightness(1.3);
      }
    }
    .complete-btn.dark {
      &:hover {
        filter: brightness(1.3);
      }
    }
  }

  .edit-task-container{
    width: 90%;
    margin: 0 auto;
    input{
      width: 100%;
      padding: 1rem;
    }
    .save-btn{
      padding: 1rem 1.5rem;
      &:hover{
        cursor: pointer;
        filter: brightness(1.3);
      }
    }
  }
}

